<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionAdresseActivity"
    android:padding="15dp">

    <TextView
        android:id="@+id/premierTexte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adressTexte"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/premierTexte"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelAdresse"/>

        <EditText
            android:id="@+id/edit_adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelAdresseComplementaire"/>

        <EditText
            android:id="@+id/edit_adresse_complementaire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelVille"/>

        <EditText
            android:id="@+id/edit_ville"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelCodePostal"/>

        <EditText
            android:id="@+id/edit_codePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/valider"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/valider"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                android:background="@drawable/background_button"
                android:layout_marginEnd="20dp"
                android:paddingRight="10dp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>