<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity">

    <Button
        android:id="@+id/buttonRetour"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background_button_rond"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_left_24"
        android:paddingRight="5dp"
        android:gravity="top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/textLocaleat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/localeat"
            android:textSize="50sp"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:textColor="@color/dark_green"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nom"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prenom"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prenom"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motDePasse"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/motDePasse_inscription"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmer_motDePasse"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:id="@+id/confirmation_motDePasse"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7"
            android:layout_marginTop="40dp">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/suivant"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="right"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/suivant"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                android:background="@drawable/background_button"
                android:layout_marginEnd="20dp"
                android:paddingRight="10dp"/>

        </LinearLayout>
    </LinearLayout>






</RelativeLayout>

