<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListeReservationsActivity">

    <Button
        android:id="@+id/boutonRetour"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/background_button_rond"
        android:drawableRight="@drawable/ic_baseline_keyboard_arrow_left_24"
        android:paddingRight="5dp"
        android:layout_margin="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="top" />

    <TextView
        android:id="@+id/listeReservationsTitre"
        android:text="@string/listeReservationsTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_below="@+id/boutonRetour"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/listeReservationsSousTitre"
        android:text="@string/listeReservationsSousTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listeReservationsTitre"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="40dp"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLayoutListeReservation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@+id/listeReservationsSousTitre"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="@string/dateReservation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15sp" />

        <TextView
            android:text="@string/produit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="15sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listeReservations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:layout_below="@+id/linearLayoutListeReservation"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

</RelativeLayout>