<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    tools:context=".CarteActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/exploitation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exploitation"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numero"
                    android:textAlignment="textStart"
                    android:textColor="@color/soleil"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/adresse_producteur"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:id="@+id/heure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/heure"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginHorizontal="10dp"/>

    </LinearLayout>

</RelativeLayout>